fix index page layout bug

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,18 +3,22 @@
 
 .container{
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
 }
+
 .carousel-item {
   height: 400px;
   background-size: auto auto;
   border-radius: 0rem;
 }
+
 .carousel-caption {
   display: flex;
   flex-direction: column;
   align-content: space-between;
 }
+
 #recommandation{
   margin: 30px;
 }
+
